--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name" : "personalwebsite",
+  "version": "1.0.0",
+  "description" : "",
+  "main" : "index.js",
+  "scripts": {
+    "start":"node index.js"
+  },
+  "keywords": [],
+  "author": "Caeleb Koharjo",
+  "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1"
